--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "@clerk/clerk-react": "^5.32.4",
     "@clerk/themes": "^2.2.55",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
