--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "typecheck": "tsc --watch"
   },
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.6.0",
     "@getbrevo/brevo": "^2.5.0",
     "@google/genai": "^1.9.0",
     "@upstash/redis": "^1.35.1",
