--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "@elevenlabs/elevenlabs-js": "^2.6.0",
     "@getbrevo/brevo": "^2.5.0",
     "@google/genai": "^1.9.0",
+    "@huggingface/inference": "^4.5.1",
     "@upstash/redis": "^1.35.1",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
