--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.6.0",
-    "@getbrevo/brevo": "^2.5.0",
     "@google/genai": "^1.9.0",
     "@huggingface/inference": "^4.5.1",
     "@upstash/redis": "^1.35.1",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
