--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "otp-generator": "^4.0.1",
     "wav-encoder": "^1.3.0"
   },
@@ -21,6 +22,7 @@
     "@tsconfig/node20": "^20.1.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/ffprobe-static": "^2.0.3",
     "@types/node": "^24.0.10",
     "@types/otp-generator": "^4.0.2",
     "@types/wav-encoder": "^1.3.3",
